--- a/_includes/navbar/navbar.html
+++ b/_includes/navbar/navbar.html
@@ -21,6 +21,20 @@
             <i class="material-icons">book</i>Docs
           </a>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-item nav-link dropdown-toggle" href="javascript:;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <i class="material-icons">miscellaneous_services </i>
+            Projects
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
+            <a class="dropdown-item dropdown-flag-holder" href="/projects/final-boot">
+              Final Boot
+            </a>
+            <a class="dropdown-item dropdown-flag-holder" href="/projects/final-framework">
+              Final Framework
+            </a>
+          </div>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="https://blog.ifinal.io" data-toggle="tooltip" data-placement="bottom" title="博客">
             <i class="material-icons">auto_stories</i>Blog
