--- a/_includes/navbar/navbar.html
+++ b/_includes/navbar/navbar.html
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-item nav-link dropdown-toggle" href="javascript:;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <i class="material-icons">miscellaneous_services </i>
+            <i class="material-icons">menu_book</i>
             Projects
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
