--- a/_includes/script.html
+++ b/_includes/script.html
@@ -6,6 +6,7 @@
 
 <script src="https://static.ifinal.io/js/core/jquery.min.js" type="text/javascript"></script>
 <script src="https://static.ifinal.io/js/core/popper.min.js" type="text/javascript"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
 <script src="https://static.ifinal.io/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
 <script src="https://static.ifinal.io/js/plugins/moment.min.js" type="text/javascript"></script>
 
