--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -120,6 +120,9 @@
 {% include script.html %}
 {% include jekyll/post.jekyll %}
 <script>
+
+</script>
+<script>
   $(document).ready(function() {
     var typedTexts = document.querySelectorAll('.typed-text');
 
