--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,18 +20,26 @@
   <!--    Stylesheets-->
   <!-- ===============================================-->
   <!--     Fonts and icons     -->
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <!-- Nucleo Icons -->
+  <link href="https://static.ifinal.io/css/nucleo-icons.css" rel="stylesheet" />
+  <link href="https://static.ifinal.io/css/nucleo-svg.css" rel="stylesheet" />
+  <!-- Font Awesome Icons -->
+  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+  <!--     Fonts and icons     -->
   <link rel="stylesheet" type="text/css" href="https://static.ifinal.io/fonts/material-icons.css"/>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+<!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">-->
 
   <!--  Material Css -->
   <link href="https://static.ifinal.io/css/material-dashboard.css" rel="stylesheet"/>
-  <link href="https://static.ifinal.io/css/material-kit.css" rel="stylesheet"/>
   <link href="/assets/css/user.css" rel="stylesheet"/>
   <!-- Markdown 主题  -->
   <link href="https://static.ifinal.io/css/markdown/orangeheart.css" rel="stylesheet"/>
 
   <!--  代码高亮  -->
   <link rel="stylesheet" href="https://static.ifinal.io/css/highlight/atom-one-dark.css">
-  <script src="//unpkg.com/@highlightjs/cdn-assets@10.7.2/highlight.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.0.1/build/highlight.min.js"></script>
 
 </head>
