--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -117,7 +117,7 @@
 <div class="container">
   {% include footer.html %}
 </div>
-{% include script.html %}
+{% include scripts.html %}
 {% include jekyll/post.jekyll %}
 <script>
 
