--- a/_layouts/prd.html
+++ b/_layouts/prd.html
@@ -52,7 +52,7 @@
     </div>
 </div>
 
-{% include script.html %}
+{% include scripts.html %}
 {% include jekyll/sidebar.jekyll %}
 
 <script src="/assets/app/markdown.js"></script>
