--- a/_includes/navbar/navbar-with-sidebar.html
+++ b/_includes/navbar/navbar-with-sidebar.html
@@ -1,6 +1,5 @@
-<nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark {{ page.navbar }}"
-     data-navbar-darken-on-scroll="data-navbar-darken-on-scroll">
-    <div class="container">
+<nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark navbar-top">
+    <div class="container-fluid">
         <button class="btn navbar-toggler-humburger-icon navbar-toggler me-1 me-sm-3" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarVerticalCollapse" aria-controls="navbarVerticalCollapse"
                 aria-expanded="false" aria-label="Toggle Navigation"><span class="navbar-toggle-icon"><span
