--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -17,7 +17,7 @@
         </script>
         {% include sidebar.html %}
         <div class="content">
-            {% include navbar/navbar.html %}
+            {% include navbar/navbar-with-sidebar.html %}
             <div class="card mb-3">
                 <div class="bg-holder d-none d-lg-block bg-card"
                      style="background-image:url(https://prium.github.io/falcon/v3.8.0/assets/img/icons/spot-illustrations/corner-4.png);"></div>
