--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,55 +4,8 @@
 {% include head.html %}
 
 <body class="sidebar-collapse" data-spy="scroll" data-target="#toc" data-offset="50">
-<nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
-     data-navbar-darken-on-scroll="data-navbar-darken-on-scroll"
-     style="background-image: none; background-color: rgba(11, 23, 39, 0);">
-    <div class="container">
-        <a class="navbar-brand" href="/index.html">
-            <div class="d-flex align-items-center py-3">
-                <img class="me-2"
-                     src="https://static.ifinal.io/favicons/favicon.png" alt=""
-                     width="40">
-                <span class="font-sans-serif">final</span>
-            </div>
-        </a>
-        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarStandard" aria-controls="navbarStandard" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item d-flex align-items-center me-2">
-                <div class="nav-link theme-switch-toggle fa-icon-wait p-0"><input
-                        class="form-check-input ms-0 theme-switch-toggle-input" id="themeControlToggle" type="checkbox"
-                        data-theme-control="theme" value="dark"><label
-                        class="mb-0 theme-switch-toggle-label theme-switch-toggle-light" for="themeControlToggle"
-                        data-bs-toggle="tooltip" data-bs-placement="left" aria-label="Switch to light theme"
-                        data-bs-original-title="Switch to light theme">
-                    <svg class="svg-inline--fa fa-sun fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas"
-                         data-icon="sun" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                         data-fa-i2svg="">
-                        <path fill="currentColor"
-                              d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"></path>
-                    </svg><!-- <span class="fas fa-sun"></span> Font Awesome fontawesome.com --></label><label
-                        class="mb-0 py-2 theme-switch-toggle-light d-lg-none" for="themeControlToggle"><span>Switch to light theme</span></label><label
-                        class="mb-0 theme-switch-toggle-label theme-switch-toggle-dark" for="themeControlToggle"
-                        data-bs-toggle="tooltip" data-bs-placement="left" aria-label="Switch to dark theme"
-                        data-bs-original-title="Switch to dark theme">
-                    <svg class="svg-inline--fa fa-moon fa-w-16" aria-hidden="true" focusable="false" data-prefix="fas"
-                         data-icon="moon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
-                         data-fa-i2svg="">
-                        <path fill="currentColor"
-                              d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"></path>
-                    </svg><!-- <span class="fas fa-moon"></span> Font Awesome fontawesome.com --></label><label
-                        class="mb-0 py-2 theme-switch-toggle-dark d-lg-none" for="themeControlToggle"><span>Switch to dark theme</span></label>
-                </div>
-            </li>
-            <li class="nav-item"><a class="nav-link text-white" href="/blogs/index.html">Blogs</a></li>
-            <li class="nav-item">
-                {% include navbar/modules.html %}
-            </li>
-        </ul>
-    </div>
-</nav>
+
+{% include navbar/navbar.html %}
 
 <section class="py-0 overflow-hidden" id="banner" data-bs-theme="light">
     <div class="bg-holder overlay"
@@ -61,10 +14,10 @@
     <div class="container">
         <div class="row flex-center pt-8 pt-lg-10 pb-lg-9 pb-xl-0">
             <div class="col-md-11 col-lg-8 col-xl-4 pb-7 pb-xl-9 text-center text-xl-start"><a
-                    class="btn btn-outline-danger mb-4 fs--1 border-2 rounded-pill" href="#!"><span class="me-2"
-                                                                                                    role="img"
-                                                                                                    aria-label="Gift">🎁</span>Become
-                a pro</a>
+                    class="btn btn-outline-danger mb-4 fs--1 border-2 rounded-pill" href="#!">
+                <span class="me-2"
+                      role="img"
+                      aria-label="Gift">🎁</span>Final</a>
                 <h1 class="title text-white">{{ page.summary }}</h1>
                 <h2><span class="typed-text font-weight-bold text-white"
                           data-typed-text='{{ page.typed | jsonify }}'></span></h2>
