--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,140 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh">
 {% include head.html %}
-<body class="off-canvas-sidebar blog-posts " data-spy="scroll" data-target="#toc" data-offset="50">
+<body class="off-canvas-sidebar blog-posts " data-spy="scroll" data-target="#terms-sidebar" data-offset="50">
 <main class="main" id="top">
 
     <!-- Navbar -->
-
-    <nav class="navbar navbar-standard navbar-expand-lg fixed-top navbar-dark"
-         data-navbar-darken-on-scroll="data-navbar-darken-on-scroll"
-         style="background-image: none; background-color: rgba(11, 23, 39, 0); transition: none 0s ease 0s;">
-        <div class="container"><a class="navbar-brand" href="../index.html"><span
-                class="text-white dark__text-white">Falcon</span></a>
-
-            <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item d-flex align-items-center me-2">
-                        <div class="nav-link theme-switch-toggle fa-icon-wait p-0"><input
-                                class="form-check-input ms-0 theme-switch-toggle-input" id="themeControlToggle"
-                                type="checkbox" data-theme-control="theme" value="dark"><label
-                                class="mb-0 theme-switch-toggle-label theme-switch-toggle-light"
-                                for="themeControlToggle"
-                                data-bs-toggle="tooltip" data-bs-placement="left" aria-label="Switch to light theme"
-                                data-bs-original-title="Switch to light theme">
-                            <svg class="svg-inline--fa fa-sun fa-w-16" aria-hidden="true" focusable="false"
-                                 data-prefix="fas" data-icon="sun" role="img" xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 512 512" data-fa-i2svg="">
-                                <path fill="currentColor"
-                                      d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z"></path>
-                            </svg><!-- <span class="fas fa-sun"></span> Font Awesome fontawesome.com --></label><label
-                                class="mb-0 py-2 theme-switch-toggle-light d-lg-none" for="themeControlToggle"><span>Switch to light theme</span></label><label
-                                class="mb-0 theme-switch-toggle-label theme-switch-toggle-dark" for="themeControlToggle"
-                                data-bs-toggle="tooltip" data-bs-placement="left" aria-label="Switch to dark theme"
-                                data-bs-original-title="Switch to dark theme">
-                            <svg class="svg-inline--fa fa-moon fa-w-16" aria-hidden="true" focusable="false"
-                                 data-prefix="fas" data-icon="moon" role="img" xmlns="http://www.w3.org/2000/svg"
-                                 viewBox="0 0 512 512" data-fa-i2svg="">
-                                <path fill="currentColor"
-                                      d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"></path>
-                            </svg><!-- <span class="fas fa-moon"></span> Font Awesome fontawesome.com --></label><label
-                                class="mb-0 py-2 theme-switch-toggle-dark d-lg-none" for="themeControlToggle"><span>Switch to dark theme</span></label>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdownLogin" href="#"
-                                                     role="button" data-bs-toggle="dropdown" aria-haspopup="true"
-                                                     aria-expanded="false">Login</a>
-                        <div class="dropdown-menu dropdown-caret dropdown-menu-end dropdown-menu-card"
-                             aria-labelledby="navbarDropdownLogin">
-                            <div class="card shadow-none navbar-card-login">
-                                <div class="card-body fs--1 p-4 fw-normal">
-                                    <div class="row text-start justify-content-between align-items-center mb-2">
-                                        <div class="col-auto">
-                                            <h5 class="mb-0">Log in</h5>
-                                        </div>
-                                        <div class="col-auto">
-                                            <p class="fs--1 text-600 mb-0">or <a
-                                                    href="../pages/authentication/simple/register.html">Create an
-                                                account</a></p>
-                                        </div>
-                                    </div>
-                                    <form>
-                                        <div class="mb-3"><input class="form-control" type="email"
-                                                                 placeholder="Email address"></div>
-                                        <div class="mb-3"><input class="form-control" type="password"
-                                                                 placeholder="Password"></div>
-                                        <div class="row flex-between-center">
-                                            <div class="col-auto">
-                                                <div class="form-check mb-0"><input class="form-check-input"
-                                                                                    type="checkbox"
-                                                                                    id="modal-checkbox"><label
-                                                        class="form-check-label mb-0" for="modal-checkbox">Remember
-                                                    me</label></div>
-                                            </div>
-                                            <div class="col-auto"><a class="fs--1"
-                                                                     href="../pages/authentication/simple/forgot-password.html">Forgot
-                                                Password?</a></div>
-                                        </div>
-                                        <div class="mb-3">
-                                            <button class="btn btn-primary d-block w-100 mt-3" type="submit"
-                                                    name="submit">
-                                                Log in
-                                            </button>
-                                        </div>
-                                    </form>
-                                    <div class="position-relative mt-4">
-                                        <hr>
-                                        <div class="divider-content-center">or log in with</div>
-                                    </div>
-                                    <div class="row g-2 mt-2">
-                                        <div class="col-sm-6"><a
-                                                class="btn btn-outline-google-plus btn-sm d-block w-100"
-                                                href="#">
-                                            <svg class="svg-inline--fa fa-google-plus-g fa-w-20 me-2"
-                                                 data-fa-transform="grow-8" aria-hidden="true" focusable="false"
-                                                 data-prefix="fab" data-icon="google-plus-g" role="img"
-                                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"
-                                                 data-fa-i2svg=""
-                                                 style="transform-origin: 0.625em 0.5em;">
-                                                <g transform="translate(320 256)">
-                                                    <g transform="translate(0, 0)  scale(1.5, 1.5)  rotate(0 0 0)">
-                                                        <path fill="currentColor"
-                                                              d="M386.061 228.496c1.834 9.692 3.143 19.384 3.143 31.956C389.204 370.205 315.599 448 204.8 448c-106.084 0-192-85.915-192-192s85.916-192 192-192c51.864 0 95.083 18.859 128.611 50.292l-52.126 50.03c-14.145-13.621-39.028-29.599-76.485-29.599-65.484 0-118.92 54.221-118.92 121.277 0 67.056 53.436 121.277 118.92 121.277 75.961 0 104.513-54.745 108.965-82.773H204.8v-66.009h181.261zm185.406 6.437V179.2h-56.001v55.733h-55.733v56.001h55.733v55.733h56.001v-55.733H627.2v-56.001h-55.733z"
-                                                              transform="translate(-320 -256)"></path>
-                                                    </g>
-                                                </g>
-                                            </svg>
-                                            <!-- <span class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span> Font Awesome fontawesome.com -->
-                                            google</a></div>
-                                        <div class="col-sm-6"><a class="btn btn-outline-facebook btn-sm d-block w-100"
-                                                                 href="#">
-                                            <svg class="svg-inline--fa fa-facebook-square fa-w-14 me-2"
-                                                 data-fa-transform="grow-8" aria-hidden="true" focusable="false"
-                                                 data-prefix="fab" data-icon="facebook-square" role="img"
-                                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
-                                                 data-fa-i2svg=""
-                                                 style="transform-origin: 0.4375em 0.5em;">
-                                                <g transform="translate(224 256)">
-                                                    <g transform="translate(0, 0)  scale(1.5, 1.5)  rotate(0 0 0)">
-                                                        <path fill="currentColor"
-                                                              d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"
-                                                              transform="translate(-224 -256)"></path>
-                                                    </g>
-                                                </g>
-                                            </svg>
-                                            <!-- <span class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span> Font Awesome fontawesome.com -->
-                                            facebook</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#!" data-bs-toggle="modal"
-                                            data-bs-target="#exampleModal">Register</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {% include navbar/navbar.html %}
     <!-- End Navbar -->
     <section class="py-0" id="banner" data-bs-theme="light">
         <div class="bg-holder overlay"
@@ -194,7 +65,6 @@
                             </div>
                         </div>
                         <div class="card-body">
-
                             <div class="tab-content">
                                 <div class="tab-pane preview-tab-pane active" role="tabpanel"
                                      aria-labelledby="tab-dom-183aec56-ff41-4a47-9391-9aa8329f403e"
@@ -223,9 +93,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="terms-sidebar nav flex-column fs--1 doc" id="terms-sidebar">
-                                    <div class="nav-item d-none">
-                                        <a class="nav-link px-0 py-1" href="#account">Account</a>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
