--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>{{ page.title }} | Final </title>
+    <title> Final </title>
 
     <!-- ===============================================-->
     <!--    Favicons-->
