--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,23 +36,7 @@
 
 </div>
 
-{% include script.html %}
-<script>
-    $(document).ready(function () {
-        var typedTexts = document.querySelectorAll('.typed-text');
-
-        if (typedTexts.length && window.Typed) {
-            typedTexts.forEach(function (typedText) {
-                return new window.Typed(typedText, {
-                    strings: JSON.parse(typedText.getAttribute("data-typed-text")),
-                    typeSpeed: 30,
-                    loop: true,
-                    backDelay: 1500
-                });
-            });
-        }
-    });
-</script>
+{% include scripts.html %}
 </body>
 
 </html>
