--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,11 +4,12 @@
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://static.ifinal.io/js/core/popper.min.js"></script>
 <script src="https://static.ifinal.io/js/core/bootstrap.min.js"></script>
-<script src="https://prium.github.io/falcon/v3.8.0/vendors/anchorjs/anchor.min.js"></script>
-<script src="https://prium.github.io/falcon/v3.8.0/vendors/is/is.min.js"></script>
-<script src="https://prium.github.io/falcon/v3.8.0/vendors/echarts/echarts.min.js"></script>
-<script src="https://prium.github.io/falcon/v3.8.0/vendors/fontawesome/all.min.js"></script>
-<script src="https://prium.github.io/falcon/v3.8.0/vendors/lodash/lodash.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/anchorjs/anchor.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/is/is.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/echarts/echarts.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/fontawesome/all.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/lodash/lodash.min.js"></script>
+<script src="https://prium.github.io/falcon/v3.15.0/vendors/countup/countUp.umd.js"></script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
 <script src="https://prium.github.io/falcon/v3.8.0/vendors/list.js/list.min.js"></script>
 <script src="https://static.ifinal.io/js/faicon.js"></script>
