--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,11 +25,14 @@
                     <h2><span class="typed-text font-weight-bold text-white"
                               data-typed-text='{{ page.typed | jsonify }}'></span></h2>
                 </div>
-                <div class="col-xl-7 offset-xl-1 align-self-end mt-4 mt-xl-0"><a class="img-landing-banner rounded"
-                                                                                 href="../index.html"><img
+                <div class="col-xl-7 offset-xl-1 align-self-end mt-4 mt-xl-0">
+                    <a class="img-landing-banner rounded" href="../index.html">
+                        <img
                         class="img-fluid"
                         src="../assets/img/generic/dashboard-alt.jpg"
-                        alt=""></a></div>
+                        alt="">
+                    </a>
+                </div>
             </div>
         </div><!-- end of .container-->
     </section>
